...
        containerView.addArrangedSubview(label)
        
        configure(state: .logo)
        logoButton.addTarget(self, action: #selector(HomeTimelineNavigationBarTitleView.logoButtonDidPressed(_:)), for: .touchUpInside)
        button.addTarget(self, action: #selector(HomeTimelineNavigationBarTitleView.buttonDidPressed(_:)), for: .touchUpInside)
        
        logoButton.accessibilityIdentifier = "TitleButton"
        logoButton.accessibilityTraits = [.header, .button]
        button.accessibilityIdentifier = "TitleButton"
    }
}

extension HomeTimelineNavigationBarTitleView {
...
